# Aero

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cpp.yml  integration.yml  python.yml  release.yml
LICENSES/: NOTICES.md
aeroruntime/: .gitignore  README.md  pyproject.toml  requirements.txt
aeroruntime/aero_runtime/: __init__.py  cli.py  loader.py  loader_cpp.py  model.py
aeroruntime/cpp/: CMakeLists.txt  README_CPP.md
aeroruntime/cpp/fuzz/: fuzz_aero_parse.cpp
aeroruntime/cpp/include/aero/: aero.hpp  aero_capi.h  aero_dequant.h  aero_internal.h  aero_runtime.h
aeroruntime/cpp/src/: aero.cpp  aero_capi.cpp  aero_dequant.cpp  aero_state_dict.cpp  aeroset.cpp
aeroruntime/cpp/tools/: aero_inspect.cpp
aerotensor/: .gitignore  README.md  pyproject.toml  requirements.txt
aerotensor/.github/workflows/: release.yml
aerotensor/aerotensor/: __init__.py  __main__.py  _blake3.py  cli.py  format.py  reader.py  writer.py
aerotensor/aerotensor/convert/: safetensors_sharded_to_aeroset.py  safetensors_to_aero.py
aerotensor/packaging/: README.md
aerotensor/packaging/aero/: README.md  pyproject.toml
aerotensor/packaging/aero/aero/: __init__.py
aerotensor/tests/: test_aeroset.py  test_converters.py  test_remote_ranges.py  test_roundtrip.py
cpp/: CMakeLists.txt  README_CPP.md
cpp/include/aero/: aero.hpp  aeroset.hpp
cpp/src/: aero.cpp
cpp/tools/: aero_extract_tensor.cpp  aero_extract_tensor_set.cpp  aero_inspect_set.cpp  aero_list_tensors.cpp  aero_validate.cpp
docs/: ADOPTION.md  AEROSET.md  AIP-0001-IHSH.md  AIP-0002-PHSH.md  COMPAT.md  CONVERTERS.md  FORMAT.md  RELEASING.md  SECURITY.md
py/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
py/aerotensor/: aeroset.py  cli.py  format.py  reader.py  remote.py  writer.py
py/aerotensor/convert/: __init__.py  gguf_to_aero.py
py/tests/: test_corruption.py  test_fuzz_mutation.py  test_integration_cpp_tools.py  test_multishard.py  test_roundtrip.py
validation/: README.md  format_benchmark.py  format_validation.py
