[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-runtime"
version = "0.1.0"
description = "Run inference directly from .aero model files — the AERO model runtime"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
readme = "README.md"
authors = [{name = "Bhuvan Prakash"}]
urls = { Homepage = "https://github.com/Aero-HQ/aeroruntime", Repository = "https://github.com/Aero-HQ/aeroruntime" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aerotensor>=0.2.0",
    "numpy>=1.20",
    "gguf>=0.6",
]

[project.optional-dependencies]
inference = [
    "torch>=2.0",
    "transformers>=4.30",
]
dev = ["pytest"]

[project.scripts]
aero-run = "aero_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["aero_runtime*"]
