[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aerotensor"
version = "0.2.0"
description = "AERO v0.2 – a chunked model container format with remote range fetching"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
readme = "README.md"
authors = [{name = "AERO Contributors"}]
urls = { Homepage = "https://github.com/bhuvanprakash/Aero", Repository = "https://github.com/bhuvanprakash/Aero" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
    "msgpack>=1.0",
    "blake3>=0.3",
    "zstandard>=0.18",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
aerotensor = "aerotensor.cli:main"

[tool.setuptools.packages.find]
include = ["aerotensor*"]

[tool.setuptools.package-data]
aerotensor = ["py.typed"]
